syntax = "proto3";

option csharp_namespace = "InventoryService";

service GrpcReviewService{
    rpc AddReview(ReviewDto) returns (Empty);
    rpc UpdateReview(ReviewDto) returns(ReviewDto);
    rpc DeleteReview(ReviewDto) returns(Empty);
    rpc GetReviewsByInventoryId(string) returns(ListedReviews);
    rpc GetReviewByUserId(int32) returns(ListedReviews);
    rpc GetReviewByUserIdAndInventoryId(UserAndInventoryId) returns(ReviewDto);
}

message ReviewDto {
    optional string id = 1;
    int32 inventory_id = 2;
    int32 external_user_id = 3;
    string username = 4;
    int32 stars = 5;
    optional string comment = 6;
}

message ListedReviews{
    repeated ReviewDto dto = 1;
}

message UserAndInventoryId{
    string inventory_id = 1;
    int32 user_id = 2;
}

message Empty {

}
